tweak language cuz the market aint what it was

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </p>
 
         <p class="tier-2">
-          The internet was built on people giving their knowledge away for free; it started that way, it continued that way, and it's still like that today...mostly. There are generations of free content that could make you a master of computer science - or, more realistically, there's enough to get you a nice, comfortable job with health benefits, vacation days, all that nice stuff. There are generations of software engineers, developers, etc, that are all self taught, and they all started where you are now. You can do it!
+          The internet was built on people giving their knowledge away for free; it started that way, it continued that way, and it's still like that today...mostly. There are generations of free content that could make you a master of computer science - or, more realistically, there's enough to get you a decent job with health benefits, vacation days, all that nice stuff. There are generations of software engineers, developers, etc, that are all self taught, and they all started where you are now. You can do it!
         </p>
 
       </div>
