add (back) a few more themes

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class="bg"></div>
     <theme-switcher
-      themes="hongkong,red-light,sea,sparkle-purple,trees,wall-balloons"
+      themes="berries,chicago,growing,hongkong,ibm,nightlights,red-light,sea,sparkle-purple,sun,trees,wall-balloons,wood"
       ext="webp"
       include-darkmode="true"
     ></theme-switcher>
@@ -92,3 +92,4 @@ closeButton.addEventListener("click", () => {
 })
   </script>
 </html>
+
